# public/swagger.json
@@ -2124,6 +2124,15 @@
 				],
 				"type": "string"
 			},
+			"InquiryType": {
+				"enum": [
+					"Trekking",
+					"Tour",
+					"Expedition",
+					"General"
+				],
+				"type": "string"
+			},
 			"Inquiry": {
 				"properties": {
 					"id": {
@@ -2165,6 +2174,9 @@
 					"status": {
 						"$ref": "#/components/schemas/InquiryStatus"
 					},
+					"type": {
+						"$ref": "#/components/schemas/InquiryType"
+					},
 					"notes": {
 						"type": "string"
 					}
@@ -2182,6 +2194,7 @@
 					"groupSize",
 					"message",
 					"status",
+					"type",
 					"notes"
 				],
 				"type": "object",
@@ -2291,6 +2304,9 @@
 					"status": {
 						"$ref": "#/components/schemas/InquiryStatus"
 					},
+					"type": {
+						"$ref": "#/components/schemas/InquiryType"
+					},
 					"notes": {
 						"type": "string"
 					}
@@ -2299,9 +2315,7 @@
 					"guestName",
 					"email",
 					"phone",
-					"country",
 					"interestedTrip",
-					"travelDates",
 					"groupSize",
 					"message"
 				],
@@ -2312,6 +2326,9 @@
 				"properties": {
 					"status": {
 						"$ref": "#/components/schemas/InquiryStatus"
+					},
+					"type": {
+						"$ref": "#/components/schemas/InquiryType"
 					},
 					"notes": {
 						"type": "string"
